# Functional-Paradigm-Demo

./: README.md  p3-functional-paradigm.cabal  sentence-analyzer.cabal  sentence-analyzer.hi  sentence-analyzer.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: sentence-analyzer.hs
