cabal-version:   3.12
name:            sentence-analyzer
version:         0.1.0.0
license:         NONE
author:          Nicholas Balarezo
maintainer:      143428049+ngbalarezo@users.noreply.github.com
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall

executable sa
    import:           warnings
    main-is:          sentence-analyzer.hs
    build-depends:    base ^>=4.18.3.0,
                      regex-compat,
                      regex-tdfa,
		      text
    hs-source-dirs:   src
    default-language: Haskell2010
